feat: store the name operation initator in the app CRD (#3252)
